[post] update - IPC - message passing

--- a/docs/programming/concurrent-programming/01. Introduction.md
+++ b/docs/programming/concurrent-programming/01. Introduction.md
@@ -22,3 +22,11 @@ Multi-threading, parallel computing, concurrent programming are powerful but qui
 Eventhough a top-level programmer designs a program, it is always expected that his/her first approach is a `single threaded` or `sequential` program.    
 
 In this sense, we need to study this subject precisely and thoroughly with low-level approach, then capsulize this as possible for not thinking much with high-level approaches. 
+
+# Citation 
+
+**Some of explanations and the python examples are originated (but somewhat modified by myself) from famous concurrent programming book - `Grokking Concurrency` (Bhargava, Aditya, and Aditya Y. Bhargava. Grokking algorithms. Simon and Schuster, 2024.)**   
+
+
+But most of explanations and **all the C++ codes are originated from myself.**
+
