--- a/docs/programming/concurrent-programming/02. Multitasking.md
+++ b/docs/programming/concurrent-programming/02. Multitasking.md
@@ -15,6 +15,15 @@ tags:
 
 Multitasking is a broad concept that encompasses both multiprocessing and multithreading as specific implementations to achieve concurrent execution of tasks.
 
+<details open markdown="block">
+  <summary>
+    Table of contents
+  </summary>
+  {: .text-delta }
+- . TOC
+{:toc}
+</details>
+
 ## Multiprogramming  
 
 Multiprogramming is a technique that allows multiple programs to reside in memory simultaneously, enabling the CPU to switch between them when the current program is waiting for I/O operations. This maximizes CPU utilization by reducing idle time. However, in multiprogramming, context switches occur primarily when a program voluntarily yields control (e.g., during I/O waits).
@@ -32,16 +41,16 @@ An application is CPU-bound if its performance primarily depends on CPU speed. S
 
 Examples:
 - Mathematical computations (e.g., matrix multiplication)
-- Encryption/decryption algorithms
 - Image/video processing
+- Encryption/decryption algorithms
 
 ### I/O-bound   
 
 An application is I/O-bound if its performance depends on the speed of I/O subsystems (e.g., disk, network). These applications benefit from faster I/O devices or optimized I/O operations.
 
 Examples:
-- Graphical user interfaces (GUIs) waiting for user input
 - Database queries reading from disk
+- Graphical user interfaces (GUIs) waiting for user input
 - Web servers handling network requests
 
 ## Preemptive Multitasking
