--- a/docs/programming/concurrent-programming/05. IPC.md
+++ b/docs/programming/concurrent-programming/05. IPC.md
@@ -20,6 +20,15 @@ In concurrent programming, multiple processes or threads (we simply gonna say th
 
 The choice of IPC mechanism depends on whether you're working with multithreading (shared memory within a single process) or multiprocessing (separate memory spaces). While "IPC" technically refers to communication between processes, we'll also consider communication between threads under the same umbrella.
 
+<details open markdown="block">
+  <summary>
+    Table of contents
+  </summary>
+  {: .text-delta }
+- . TOC
+{:toc}
+</details>
+
 ## Types of IPC
 
 IPC mechanisms can be broadly classified into two categories:
