--- a/docs/programming/concurrent-programming/07. IPC-Shared-Memory.md
+++ b/docs/programming/concurrent-programming/07. IPC-Shared-Memory.md
@@ -19,6 +19,15 @@ tags:
 
 Shared-memory IPC allows multiple tasks to access a common memory segment. This technique is fast because there is no need to copy data between tasks, but it requires proper synchronization mechanisms like semaphores or mutexes to ensure data consistency.
 
+<details open markdown="block">
+  <summary>
+    Table of contents
+  </summary>
+  {: .text-delta }
+- . TOC
+{:toc}
+</details>
+
 ### Shared Memory
 
 Shared memory is a region of memory that can be accessed by multiple processes. It enables high-speed data exchange but requires explicit synchronization to prevent data corruption or race conditions.
