[post] new post and fix

--- a/docs/programming/concurrent-programming/06. IPC-Message-Passing.md
+++ b/docs/programming/concurrent-programming/06. IPC-Message-Passing.md
@@ -637,5 +637,4 @@ Server: Waiting for a client...
 
 ## Conclusion
 
-Inter-Process Communication (IPC) is fundamental to concurrent programming, allowing processes and threads to coordinate efficiently. Choosing the right IPC mechanism depends on factors such as performance requirements, data-sharing needs, and synchronization complexity. While shared memory offers high-speed access, message-passing techniques provide better isolation and modularity, making them suitable for different use cases in multi-threaded and multiprocessing environments.
-
+Inter-Process Communication (IPC) is fundamental to concurrent programming, allowing processes and threads to coordinate efficiently. Message-passing IPC techniques provide better isolation and modularity at the cost of high-performance compared to shared-memory IPC.
