--- a/docs/programming/concurrent-programming/07. IPC-Shared-Memory.md
+++ b/docs/programming/concurrent-programming/07. IPC-Shared-Memory.md
@@ -28,11 +28,18 @@ Shared-memory IPC allows multiple tasks to access a common memory segment. This 
 {:toc}
 </details>
 
+## Mutex (Lock)
+Unlike message-passing IPC, shared memory is not managed by the OS. Therefore, developers must use a `mutex` (refers to mutual exclusion, often referred to as a `lock`) to prevent simultaneous access to shared resources by multiple threads.
+
+## Condition Variable
+
+Condition variables are a synchronization primitive that allows threads to wait until a specific condition is matched. They are essential for coordinating actions between threads, especially in scenarios where threads need to communicate about the state of shared data. In short, mutexes protect shared data while condition variables allow threads to wait efficiently for changes in that shared data.
+
 ## Shared Memory
 
 Shared memory is a region of memory that can be accessed by multiple processes. It enables high-speed data exchange but requires explicit synchronization to prevent data corruption or race conditions.
 
-## Characteristics of Shared Memory
+### Characteristics of Shared Memory
 1. **Direct Access**  
 Shared memory involves creating a region of memory in userland that multiple processes or threads can directly access.
 2. **Speed**  
@@ -40,8 +47,6 @@ Shared memory is generally faster than message passing because it avoids the ove
 3. **Developer Responsibility**  
 The OS provides the mechanism to create the shared memory region, but it does not manage concurrent access.
 
-## Mutex (Lock)
-Unlike message-passing IPC, shared memory is not managed by the OS. Therefore, developers must use a `mutex` (refers to mutual exclusion, often referred to as a `lock`) to prevent simultaneous access to shared resources by multiple threads.
 
 
 ### Python Example
@@ -148,13 +153,9 @@ int main()
 }
 ```
 
-## Thread Pool Pattern
+## **Thread Pool Pattern**
 
 A thread pool consists of multiple worker threads that execute tasks concurrently. These threads share resources, reducing the overhead of creating and destroying threads frequently. Synchronization techniques, such as mutexes and condition variables, help manage access to shared resources efficiently.
-
-## Condition Variable
-
-Condition variables are a synchronization primitive that allows threads to wait until a specific condition is matched. They are essential for coordinating actions between threads, especially in scenarios where threads need to communicate about the state of shared data. In short, mutexes protect shared data while condition variables allow threads to wait efficiently for changes in that shared data.
 
 ### Thread Pool in Python
 ```python
