--- a/docs/programming/concurrent-programming/08. Decomposition.md
+++ b/docs/programming/concurrent-programming/08. Decomposition.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 08. Decomposition
+title: 08. Decomposition (In progress)
 parent: Concurrent Programming
 tags: 
   - concurrent programming
