--- a/docs/programming/concurrent-programming/03. Multiprocessing.md
+++ b/docs/programming/concurrent-programming/03. Multiprocessing.md
@@ -59,13 +59,46 @@ These aspects of a process are closely related. The allocated memory of a proces
 A process is generally created and controlled by the OS.
 
 ```mermaid
+%%{
+  init: {
+    'theme': 'base',
+    'themeVariables': {
+      'primaryColor': '#b19cd9',
+      'primaryTextColor': '#4b0082',
+      'primaryBorderColor': '#800080',
+      'edgeLabelBackground': '#ffffff',
+      'tertiaryColor': '#e6e6fa', 
+      'nodeBorder': '#6a0dad'
+    },
+    'curve': 'basis'
+  }
+}%%
 graph LR
-    New --> Ready;
-    Ready --> Running;
-    Running --> Ready;
-    Running --> Blocked;
-    Blocked --> Ready;
-    Running --> Terminated;
+
+%% Define process states
+new["New Process"]
+ready["Ready"]
+running["Running"]
+wait["Waiting"]
+zombie["Zombie"]
+terminated["Terminated"]
+
+%% Define transitions
+new -->|Admitted to execution| ready
+ready -->|Gets CPU execution| running
+running -->|Loses CPU execution| ready
+running -->|Waits for event| wait
+wait -->|Event occurs| ready
+running -->|Process completes| zombie
+zombie -->|Parent process ends| terminated
+
+%% Group active states
+subgraph Active States
+    ready
+    running
+    wait
+end
+
 ```
 
 ## How Multiple Processes Work?
