--- a/docs/programming/python/01. Typing.md
+++ b/docs/programming/python/01. Typing.md
@@ -38,12 +38,12 @@ Members = T.List[str]
 class Party:
     def __init__(self, name: str, party_members: Members) -> None:
         self._name: str = name
-        self._party_members: Members = party_members  # More concise type hint
+        self._party_members = party_members
 
     def join(self, new_members: Members) -> None:
-        self._party_members.extend(new_members)  # Use extend for in-place modification
+        self._party_members.extend(new_members)
 
-    def __str__(self) -> str: #add __str__ method for printing
+    def __str__(self) -> str:
         return f"Party Name: {self._name}\nMembers: {', '.join(self._party_members)}"
 
 def main():
@@ -76,7 +76,7 @@ from pydantic import BaseModel
 
 class Party(BaseModel):
     name: str
-    members: List[str] = []  # Initialize to an empty list
+    members: List[str] = []
 
     def join(self, new_members: List[str]) -> None:
         self.members.extend(new_members)
@@ -94,12 +94,12 @@ def main():
 
     # Example of pydantic validation
     try:
-        invalid_party = Party(name="Invalid", members=[1, 2, 3])  # Type error for members
+        invalid_party = Party(name="Invalid", members=[1, 2, 3])
     except ValueError as e:
         print(f"Pydantic Validation Error: {e}")
 
     try:
-        lunch_party.join("not a list") #Type Error for new_members
+        lunch_party.join("not a list")
     except ValueError as e:
         print(f"Pydantic Validation Error: {e}")
 
